# meta_hackathon_solo

./: .huggingfaceignore  Dockerfile  README.md  __init__.py  client.py  deploy.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py  test.py
server/: __init__.py  app.py
