[project]
name = "openenv_email"
version = "1.0.0"
description = "Enterprise Email Triage OpenAI Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0,<0.116.0",
    "uvicorn>=0.30.0,<0.33.0",
    "pydantic>=2.0.0,<3.0.0",
    "openai>=1.0.0,<2.30.0",
    "requests>=2.31.0,<3.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "openenv_email.server.app:main"
